add many thing -_- in 1 day

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -16,11 +16,12 @@
   display: flex;
 }
 
-.nav-item {
+.nav-link {
   margin: 0 10px;
+  text-decoration: none;
 }
 
-.nav-link {
+.nav-item {
   text-decoration: none;
   color: #fff;
   font-weight: bold;
