--- a/src/components/GlassesCard/GlassesCard.css
+++ b/src/components/GlassesCard/GlassesCard.css
@@ -4,7 +4,7 @@
   overflow: hidden;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   margin: 15px;
-  max-width: 300px;
+  width: 300px;
 }
 
 .glasses-image {
