--- a/src/pages/GlassesShop/GlassesShop.css
+++ b/src/pages/GlassesShop/GlassesShop.css
@@ -23,13 +23,9 @@
 }
 
 .pagination a {
-  padding: 10px;
-  margin: 5px;
   cursor: pointer;
   text-decoration: none;
   color: #3498db;
-  border: 1px solid #3498db;
-  border-radius: 5px;
   transition: background-color 0.3s, color 0.3s;
 }
 
@@ -40,5 +36,7 @@
 
 .active {
   background-color: #3498db;
+}
+.active a {
   color: #fff;
 }
